Fix minor alignment issue

--- a/graphics/styles/break/stages.css
+++ b/graphics/styles/break/stages.css
@@ -131,7 +131,7 @@
 }
 
 .scene.stages-scene > .stages-scoreboard > fitted-text {
-	margin: 0 5px;
+	margin: 0 10px;
 	font-size: 35px;
 	font-weight: 600;
 }
